--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "heroes3-demonology",
     "version": "0.1.0",
     "devDependencies": {
-        "serve": "^13.0.2"
+        "jest": "29.7.0",
+        "prettier": "3.0.3",
+        "serve": "13.0.2"
     },
     "type": "module",
     "scripts": {
         "start": "serve ./src",
-        "test": "node ./test/calc_test.js"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     }
 }
