--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "type": "module",
     "devDependencies": {
+        "serve": "14.2.1",
         "jest": "29.7.0",
         "prettier": "3.0.3",
         "serve": "13.0.2"
